--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@supabase/supabase-js": "^2.95.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.34.0",
     "hono": "4.7.7",
     "lucide-react": "^0.510.0",
     "nanoid": "^5.1.6",
@@ -28,6 +29,7 @@
     "@types/node": "22.14.1",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "4.4.1",
     "autoprefixer": "^10.4.21",
     "eslint": "9.25.1",
