--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
-dist/
+# Dependencies
 node_modules/
-.wrangler/
+dist/
+
+# Environment Variables & Secrets
+.env
 .dev.vars
+wrangler.json
 worker-configuration.d.ts
+
+# Cloudflare
+.wrangler/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# System Files
+.DS_Store
+Thumbs.db
